--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -1,24 +1,16 @@
-; en-GB (english-United Kingdom) languagefile for RSGallery2
-; @version $Id: en-GB.com_rsgallery2.ini 1090 2012-07-09 18:52:20Z mirjam $
-; @package Rsg2
+; en-GB (english-United Kingdom) language file for RSGallery2
+; @version $Id: en-GB.COM_RSG2.ini 1090 2012-07-09 18:52:20Z mirjam $
+; @package RSGallery2
 ; @copyright (C) 2003 - 2012 RSGallery2
 ; @license http://www.gnu.org/copyleft/gpl.html GNU/GPL
-; @author finnern
+; @author RSGallery2 Team
 ;
-;
-; Translations used for admin
+; Last updated: used en-GB.COM_RSG2.ini from SVN 1078, translated till SVN 1079
 ; Save in UTF-8 without BOM (with e.g. Notepad ++)
+
 ; If the language file only shows the keys in Joomla, turn on Joomla's debug system and
 ; debug language (global configuration) and check for 'Parsing errors in language files'. 
 ; This will also show a list of 'Untranslated Strings'.
-
-
-;-----------------------------------------------------------------
-; Old parts
-;-----------------------------------------------------------------
-
-
-
 
 COM_RSG2="RSGallery2"
 COM_RSG2_ABSTRACT_IMAGE_LIBRARY_CLASS_NO_RESIZE_AVAILABLE="This is the abstract image library class, no resize available"
@@ -27,8 +19,7 @@ COM_RSG2_ACCESS_CONTROL_SETTINGS="Access Control Settings"
 COM_RSG2_ACL_NO_PERM_FOUND="No permissions were found, so default permissions were created. Please try again."
 COM_RSG2_ACTION="Action"
 COM_RSG2_ADD_COMMENT="Add comment"
-COM_RSG2_ADD_IMAGE="Add Image"
-COM_RSG2_ADVANCED_SEF_ALL_CATEGORY_NAMES_AND_ITEM_TITLES_MUST_BE_UNIQUE="Advanced SEF (all gallery names and item titles must be unique)"
+COM_RSG2_ADD_IMAGE="Add image"
 COM_RSG2_ADVANCED_SEF_ALL_CATEGORY_NAMES_AND_ITEM_TITLES_MUST_BE_UNIQUE="Advanced SEF (all gallery names and item titles must be unique)"
 COM_RSG2_ALERT_NOCATSELECTED="Please select gallery for ALL images!\\n(Also for images that will be deleted.\\nnThis will be corrected in future version!)"
 COM_RSG2_ALERT_NONEWCAT="Gallery could not be created! We wil take you back to the previous screen."
@@ -77,8 +68,8 @@ COM_RSG2_CONFIGURATION="Configuration"
 COM_RSG2_CONFIGURATION_RAW_EDIT="Configuration Raw Edit"
 COM_RSG2_CONFIGURATION_SAVED="Configuration Saved"
 COM_RSG2_CONFIGURATION_VARIABLES="Configuration Variables"
-COM_RSG2_CONFIG_-_RAW_EDIT="Config - Raw Edit"
-COM_RSG2_CONFIG_-_VIEW="Config - View"
+COM_RSG2_CONFIG_MINUS_RAW_EDIT="Config - Raw Edit"
+COM_RSG2_CONFIG_MINUS_VIEW="Config - View"
 COM_RSG2_CONFIRM_REMOVAL="Confirm removal"
 COM_RSG2_CONSDB_NOTICE="&nbsp;<span style='text-size: 14px;font-weight:bold;'>NOTICE</span>:<br />The Consolidate Database feature is mostly operational. The feature 'Create Database Entry' is also added.<br />Notice however that you cannot add Multiple entries to the database. For now, you'll have to add them one by one!"
 COM_RSG2_CONSOLIDATE_DATABASE="Consolidate database"
@@ -86,7 +77,7 @@ COM_RSG2_CONSOLIDATE_DB="The 'Consolidate Database' function performs a check on
 COM_RSG2_CONTINUE="Continue ..."
 COM_RSG2_CONTROL_PANEL="Control Panel"
 COM_RSG2_COOKIE_PREFIX="Cookie prefix"
-COM_RSG2_COPY-MOVE="Copy/Move:"
+COM_RSG2_COPY_SLASH_MOVE="Copy/Move:"
 COM_RSG2_COPY="Copy"
 COM_RSG2_COULD_NOT_BE_DELETED_DELETE_MANUALLY="Table %s could not be deleted.<br />Delete manually."
 COM_RSG2_COULD_NOT_COPY="could not copy "
@@ -94,7 +85,7 @@ COM_RSG2_COULD_NOT_UPDATE_GALLERY_DETAILS="Could not update gallery details!"
 COM_RSG2_COULD_NOT_UPDATE_IMAGE_DETAILS="Could not update image details"
 COM_RSG2_CPANEL="CPanel"
 COM_RSG2_NR_OF_USERGALLERIES_CREATED="created)"
-COM_RSG2_CREATED-="Created: "
+COM_RSG2_CREATED="Created: "
 COM_RSG2_CREATE_A_CATEGORY_FIRST="Create a gallery first!"
 COM_RSG2_CREATE_DATABASE_ENTRIES="Create database entries"
 COM_RSG2_CREATE_DATABASE_ENTRY="Create database entry"
@@ -130,7 +121,7 @@ COM_RSG2_DETAILS_SAVED_SUCCESFULLY="Details saved successfully"
 COM_RSG2_DIRECTION_ONLY_WORKS_FOR_FLOAT="Direction (only works for float)"
 COM_RSG2_DIRECTORY_CREATED="Directory created: "
 COM_RSG2_DIRECTORY_STRUCTURE_DELETED="Directory %s deleted!"
-COM_RSG2_DISPLAY-FOLDER="Display<br>folder"
+COM_RSG2_DISPLAY_BR_FOLDER="Display<br>folder"
 COM_RSG2_DISPLAY="Display"
 COM_RSG2_DISPLAY_BRANDING="Display Branding"
 COM_RSG2_DISPLAY_COMMENTS="Display Comments"
@@ -160,11 +151,11 @@ COM_RSG2_DROPED_TABLE___RSGALLERY2_FILES="DROPed #__rsgallery2_files"
 COM_RSG2_DROPED_TABLE___RSGALLERY2_GALLERIES="DROPed #__rsgallery2_galleries"
 COM_RSG2_EDIT="Edit"
 COM_RSG2_EDIT_IMAGE="Edit image"
-COM_RSG2_EDIT_IMAGES="Edit Images"
+COM_RSG2_EDIT_IMAGES="Edit images"
 COM_RSG2_ENABLE_ACCESS_CONTROL="Enable Access Control"
 COM_RSG2_ENTER_WHAT_YOU_SEE_IN_THE_IMAGE_ABOVE="Enter what you see in the image above:"
 COM_RSG2_ENTRIES_PROCESSED=" entries processed)"
-COM_RSG2_ERROR-="Error: "
+COM_RSG2_ERROR_COLON_SPACE="Error: "
 COM_RSG2_ERROR_CREATING_DISPLAY_IMAGE="Error creating display image"
 COM_RSG2_ERROR_CREATING_THUMB_IMAGE="Error creating thumb image"
 COM_RSG2_ERROR_CROPPING_IMAGE="Error cropping image"
@@ -202,7 +193,7 @@ COM_RSG2_FONT="Font"
 COM_RSG2_FREETYPE_LIBRARY_INSTALLED_WATERMARK_IS_POSSIBLE="(Freetype library installed, watermark is possible)"
 COM_RSG2_FREETYPE_LIBRARY_NOT_INSTALLED_WATERMARK_DOES_NOT_WORK="(Freetype library NOT installed! Watermark does not work)"
 COM_RSG2_FRONT_PAGE="Front Page"
-COM_RSG2_FTP-PATH="FTP-path"
+COM_RSG2_FTP_PATH="FTP-path"
 COM_RSG2_FTP_BASE_PATH="FTP base path is: %s"
 COM_RSG2_FTP_PATH="FTP Path:"
 COM_RSG2_FTP_UPLOAD_CHOSEN_BUT_NO_FTP-PATH_PROVIDED="FTP upload chosen but no FTP-path provided"
@@ -228,12 +219,12 @@ COM_RSG2_GRAY="gray"
 COM_RSG2_GREEN="green"
 COM_RSG2_HITS="Hits"
 COM_RSG2_HITS_RESET_TO_ZERO_SUCCESFULL="Hits reset to zero successfull"
-COM_RSG2_HTML-ROOT_IS="HTML-root is"
+COM_RSG2_HTML_MINUS_ROOT_IS="HTML-root is"
 COM_RSG2_HTML="HTML"
 COM_RSG2_HUGE="huge"
 COM_RSG2_ID="ID"
 COM_RSG2_IF_MORE_GALLERIES_THAN_LIMIT="If more galleries than limit"
-COM_RSG2_IMAGE-S_WERE_NOT_DELETED="Image(s) were not deleted!"
+COM_RSG2_IMAGE_S_WERE_NOT_DELETED="Image(s) were not deleted!"
 COM_RSG2_IMAGE="Image"
 COM_RSG2_IMAGEMAGICK_NOT_DETECTED="ImageMagick not detected"
 COM_RSG2_IMAGEMAGICK_PATH="ImageMagick Path"
@@ -251,7 +242,7 @@ COM_RSG2_IMAGE_STORAGE="Image Storage"
 COM_RSG2_IMAGE_TO=" image to: "
 COM_RSG2_IMAGE_UPLOAD="Image upload"
 COM_RSG2_IMAGE_WATERMARK="Image Watermark"
-COM_RSG2_IN-DATABASE="In<br>database"
+COM_RSG2_IN_BR_DATABASE="In<br>database"
 COM_RSG2_INCORRECT_CAPTCHA_CHECK_COMMENT_IS_NOT_SAVED="Incorrect CAPTCHA check, comment is NOT saved!"
 COM_RSG2_INSTALL="Install"
 COM_RSG2_INSTALLATION_OF_RSGALLERY_IS_COMPLETED="RSGallery2 is installed"
@@ -272,7 +263,7 @@ COM_RSG2_IS_NOT_SUCCESFULLY_ALTERED=" is NOT successfully altered"
 COM_RSG2_IS_NOT_WRITABLE=" is NOT writable!"
 COM_RSG2_IS_SUCCESFULLY_ALTERED=" is successfully altered"
 COM_RSG2_IS_SUCCESFULLY_RENAMED=" is successfully renamed"
-COM_RSG2_ITEM-S_COPIED_SUCCESSFULLY="Item(s) copied successfully!"
+COM_RSG2_ITEM_S_COPIED_SUCCESSFULLY="Item(s) copied successfully!"
 COM_RSG2_ITEM="Item"
 COM_RSG2_ITEMS="Items"
 COM_RSG2_ITEM_FILES="Item files"
@@ -293,7 +284,7 @@ COM_RSG2_LIME="lime"
 COM_RSG2_LINKS_TO_IMAGE="Links to image"
 COM_RSG2_LINK_TEXT="Link text"
 COM_RSG2_LINK_TEXT_DESC="The text to use for the above link"
-COM_RSG2_MAGE-S_DELETED_SUCCESFULLY="Image(s) deleted successfully!"
+COM_RSG2_MAGE_S_DELETED_SUCCESFULLY="Image(s) deleted successfully!"
 COM_RSG2_MAGIC_NOT_IMPLEMENTED_YET="Magic not implemented yet"
 COM_RSG2_MAGIC_NOT_SUPPORTED_YET="Magic(not supported yet!)"
 COM_RSG2_MAINTENANCE="Maintenance"
@@ -313,7 +304,7 @@ COM_RSG2_MAINT_REGEN_TXT="This option will regenerate thumbnails, based on the c
 COM_RSG2_MAIN_GALLERY_PAGE="Main gallery page"
 COM_RSG2_MANAGE="Manage"
 COM_RSG2_MANAGE_GALLERIES="Manage Galleries"
-COM_RSG2_MANAGE_ITEMS="Manage Items"
+COM_RSG2_MANAGE_IMAGES="Manage Images"
 COM_RSG2_MAROON="maroon"
 COM_RSG2_MAXIMUM_IMAGES_ALLOWED="Maximum images allowed"
 COM_RSG2_MAXIMUM_NUMBER_OF_GALLERIES_A_USER_CAN_HAVE="Maximum number of galleries a user can have"
@@ -386,13 +377,13 @@ COM_RSG2_ORDER="Order"
 COM_RSG2_ORDERING="Ordering"
 COM_RSG2_ORDER_DIRECTION="Order direction"
 COM_RSG2_ORDER_IMAGES_BY="Order images by"
-COM_RSG2_ORIGINAL-FOLDER="Original<br>folder"
+COM_RSG2_ORIGINAL_BR_FOLDER="Original<br>folder"
 COM_RSG2_ORIGINAL="Original"
 COM_RSG2_ORIGINAL_FILES_SUCCESFULLY_TRANSFERED="Original files successfully transfered"
 COM_RSG2_ORIGINAL_IMAGE_PATH="Original Image Path"
 COM_RSG2_OUT_OF=" out of "
 COM_RSG2_OWNER="Owner"
-COM_RSG2_OWNER-="Owner: "
+COM_RSG2_OWNER_DBLPT="Owner: "
 COM_RSG2_PACKAGE_FILE="Package File:"
 COM_RSG2_PARAMETERS="Parameters"
 COM_RSG2_PARAM_IMAGES_LINK="Link"
@@ -413,7 +404,7 @@ COM_RSG2_PROPORTIONAL="Proportional"
 COM_RSG2_PUBLIC="Public</span>"
 COM_RSG2_PUBLISHED="Published"
 COM_RSG2_PURGED="Purge complete: removed tables and images. Ready to uninstall."
-COM_RSG2_PURGEDELETE_EVERYTHING="Purge tables & delete all images (do not use - buggy in v2)"
+COM_RSG2_PURGEDELETE_EVERYTHING="Purge tables (data) & delete all images"
 COM_RSG2_PURGED_COMMENTS_FROM_DATABASE="Purged table with comments from database."
 COM_RSG2_PURGED_CONFIG_FROM_DATABASE="Purged table with config from database."
 COM_RSG2_PURGED_GALLERIES_FROM_DATABASE="Purged table with galleries from database."
@@ -463,7 +454,7 @@ COM_RSG2_SELECT_SLIDESHOW="Select slideshow"
 COM_RSG2_SHOW_IMAGE_NAME_BELOW_THUMBNAIL="Show image name below thumbnail"
 COM_RSG2_SHOW_MY_GALLERIES="Show My Galleries"
 COM_RSG2_SILVER="silver"
-COM_RSG2_SIZE-="Size: "
+COM_RSG2_SIZE_DBLPT="Size: "
 COM_RSG2_SIZE_FROM_LIST="-size-"
 COM_RSG2_SLIDESHOW="Slideshow"
 COM_RSG2_SMALL="small"
@@ -476,9 +467,10 @@ COM_RSG2_STEP_2="Step 2"
 COM_RSG2_STEP_3="Step 3"
 COM_RSG2_STOP="Stop"
 COM_RSG2_SUBGALLERIES="Subgalleries: "
-COM_RSG2_SUBMENU_BATCH-UPLOAD="Batch Upload"
-COM_RSG2_SUBMENU_CONTROL-PANEL="Control Panel"
+COM_RSG2_SUBMENU_BATCH_UPLOAD="Batch Upload"
+COM_RSG2_SUBMENU_CONTROL_PANEL="Control Panel"
 COM_RSG2_SUBMENU_GALLERIES="Galleries"
+COM_RSG2_SUBMENU_IMAGES="Images"
 COM_RSG2_SUBMENU_ITEMS="Items"
 COM_RSG2_SUBMENU_UPLOAD="Upload"
 COM_RSG2_SUCCESS_NOW_USING_RSGALLERY2="Success.  Now using RSGallery2 %s"
@@ -494,7 +486,7 @@ COM_RSG2_THE_REST_OF_YOUR_FILES_WERE_UPLOADED_FINE="the rest of your files were 
 COM_RSG2_THE_UPLOADED_FILE_EXCEEDS_THE_UPLOAD_MAX_FILESIZE_DIRECTIVE="The uploaded file exceeds the upload_max_filesize directive "
 COM_RSG2_THE_UPLOADED_FILE_WAS_ONLY_PARTIALLY_UPLOADED="The uploaded file was only partially uploaded."
 COM_RSG2_THIS_GALLERY_IS_NOT_PUBLISHED="This gallery is NOT published"
-COM_RSG2_THUMB-FOLDER="Thumb<br>folder"
+COM_RSG2_THUMB_FOLDER="Thumb<br>folder"
 COM_RSG2_THUMB="Thumb"
 COM_RSG2_THUMBDIRECTORY_IS="Thumbdirectory is"
 COM_RSG2_THUMBNAILS_PER_PAGE="Thumbnails per Page"
@@ -525,7 +517,7 @@ COM_RSG2_UPGRADE_REC_FULL="Component found, but no version information available
 COM_RSG2_UPGRADE_SUCCESS="Upgrade to RSGallery2 is completed.\nYou can now safely uninstall the old RSGallery"
 COM_RSG2_UPGRADE_THUMB_TRANF_ERROR="There were errors transferring thumb files to the new structure.<br />Please check via FTP"
 COM_RSG2_UPLOAD="Upload"
-COM_RSG2_UPLOADED-="Uploaded:"
+COM_RSG2_UPLOADED_DBLPT="Uploaded:"
 COM_RSG2_UPLOAD_DETAILS="Upload details"
 COM_RSG2_UPLOAD_EDIT_IMAGES="Upload/Edit<br/>images</span>"
 COM_RSG2_UPLOAD_FAILED_AS_MEDIA_DIRECTORY_DOES_NOT_EXIST="Upload failed as <code>/media</code> directory does not exist."
@@ -534,8 +526,8 @@ COM_RSG2_UPLOAD_FAILED_BACK_TO_UPLOADSCREEN="Upload failed.\\nBack to uploadscre
 COM_RSG2_UPLOAD_FILE="Upload File"
 COM_RSG2_UPLOAD_LIMIT_IS="Upload limit is"
 COM_RSG2_UPLOAD_PACKAGE_FILE="Upload Package File"
-COM_RSG2_UPLOAD_ZIP-FILE="Upload ZIP-file"
-COM_RSG2_USED_RM_-R_TO_ATTEMPT_TO_REMOVE_JPATH_SITE_IMAGES_RSGALLERY="Used rm -r to attempt to remove JPATH_SITE/images/rsgallery"
+COM_RSG2_UPLOAD_ZIP_MINUS_FILE="Upload ZIP-file"
+COM_RSG2_USED_RM_MINUS_R_TO_ATTEMPT_TO_REMOVE_JPATH_SITE_IMAGES_RSGALLERY="Used rm -r to attempt to remove JPATH_SITE/images/rsgallery"
 COM_RSG2_USER="User"
 COM_RSG2_USERCAT_SUBCATS="This gallery cannot be deleted, it contains subgalleries. If you want to delete this gallery, first move or delete subgalleries."
 COM_RSG2_USERIMAGE_NOTOWNER="You are not the owner of this image, taking you back to the main screen"
@@ -590,9 +582,9 @@ COM_RSG2_YOU_MUST_PROVIDE_A_GALLERY_NAME="You must provide a gallery name."
 COM_RSG2_YOU_MUST_SELECT_A_GALLERY="You must select a gallery."
 COM_RSG2_YOU_NEED_TO_SELECT_A_PARENT_GALLERY="You need to select a parent gallery"
 COM_RSG2_YOU_SHOULD_ENTER_YOUR_NAME="You should enter your name"
-COM_RSG2_ZIP-FILE="ZIP-file"
-COM_RSG2_ZIP-FILE_IS_TOO_BIG="ZIP-file is too big!"
-COM_RSG2_ZIP-UPLOAD_SELECTED_BUT_NO_FILE_CHOSEN="ZIP-upload selected but no file chosen"
+COM_RSG2_ZIP_MINUS_FILE="ZIP-file"
+COM_RSG2_ZIP_MINUS_FILE_IS_TOO_BIG="ZIP-file is too big!"
+COM_RSG2_ZIP_MINUS_UPLOAD_SELECTED_BUT_NO_FILE_CHOSEN="ZIP-upload selected but no file chosen"
 ;New in v3...
 COM_RSG2_CHOOSE_GALLERY="Choose gallery"
 COM_RSG2_CHOOSE_GALLERY_DESC="Choose the 'top gallery' for this menu item from this list of all your published (sub)galleries.<p> Default is 'Root Gallery' which holds all galleries."
@@ -781,6 +773,21 @@ COM_RSG2_SHOW_ONLY_OWN_GALLERIES_IN_MY_GALLERIES="Show only galleries owned by t
 COM_RSG2_SHOW_ONLY_OWN_GALLERIES_IN_MY_GALLERIES_TOOLTIP="The list of galleries shown in the frontend My Galleries can be limited to galleries owned by the logged in user or can show all galleries independent of the owner."
 ;new after SVN 1084
 COM_RSG2_REQUESTED_GALLERY_DOES_NOT_EXIST="The requested gallery does not exist"
+COM_RSG2_PATH_MUST_START_WITH_BASE_PATH="Path must start with base path and end with '\'" 
+COM_RSG2_DEBUG_ACTIVATED_INFO="Attention: On Yes to Debug a log file per day will be created in folder 'joomlaBase\log' and notices will appear on top of every form. Please delete log files regularly" 
+
+COM_RSG2_MODULE_CURRENTLY_EDITED="The module %s is currently being edited by another administrator"
+COM_RSG2_GALLERY_HAS_NO_IMAGES_ASSIGNED="No images assigned in gallery"
+COM_RSG2_NO_GALLERY_ASSIGNED="No gallery assigned"
+
+COM_RSG2_PLEASE_SELECT_A_DIR="Please select a directory"
+COM_RSG2_PLEASE_ENTER_A_URL="Please enter a URL"
+
+COM_RSG2_CONFIRM_PURGE_TABLES_DEL_IMAGES="Attention: This will purge (clean) all data and delete all images. The RSG2 table structure will be kept and RSG2 is still working. Do you want to continue ?"
+COM_RSG2_CONFIRM_DELETE_TABLES_IMAGES="Attention: This will delete all tables (in database). It shall be used for uninstall before removing the component. RSG2 is not working afterwards. Do you want to continue ?"
+COM_RSG2_DANGER_ZONE="Danger zone"
+COM_RSG2_MINUS_RANDOM_THUMBNAIL_MINUS="- Random thumbnail -"
+
 COM_RSG2_IMAGE="Image"
 COM_RSG2_IMAGES="Images"
 COM_RSG2_IMAGE_FILES="Image files"
@@ -793,9 +800,8 @@ COM_RSG2_MENU_CONTROL_PANEL="Control panel"
 COM_RSG2_MENU_BATCH_UPLOAD="Batch upload"
 COM_RSG2_MENU_UPLOAD="Upload"
 COM_RSG2_MENU_GALLERIES="Galleries"
-;COM_RSG2_MENU_ITEMS="Images"
 COM_RSG2_MENU_IMAGES="Images"
+COM_RSG2_MENU_CONFIG="Configuration"
 
 COM_RSG2_SUMMARY_TREE_VIEW="Summary view"
-
 
