New texts for rsgallery2 info

--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -806,5 +806,10 @@ COM_RSG2_MENU_CONFIG="Konfiguration"
 ;COM_RSG2_SUMMARY_TREE_VIEW="Summarische Auflistung"
 COM_RSG2_SUMMARY_TREE_VIEW="Zusammenfassende Auflistung"
 
-
+COM_RSG2_FORUM="Forum"
+COM_RSG2_DOCUMENTATION="Documentation"
+COM_RSG2_VIEW_CHANGE_LOG=""
+COM_RSG2_JUMP_TO_GNU_ORG=""
+COM_RSG2_JUMP_TO_FORUM=""
+COM_RSG2_JUMP_TO_DOCUMENTATION=""
 
