--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -805,3 +805,10 @@ COM_RSG2_MENU_CONFIG="Configuration"
 
 COM_RSG2_SUMMARY_TREE_VIEW="Summary view"
 
+COM_RSG2_FORUM="Forum"
+COM_RSG2_DOCUMENTATION="Documentation"
+COM_RSG2_VIEW_CHANGE_LOG="View change log of Rsgallery2 software versions"
+COM_RSG2_JUMP_TO_GNU_ORG="Jump to GNU ORG (License definition)"
+COM_RSG2_JUMP_TO_FORUM="Jump to forum for Help with RSgallery2"
+COM_RSG2_JUMP_TO_DOCUMENTATION="Jump to rsgallery21 documentation (Actual old but better than nothing)"
+
