small changes text  + added diff

--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -809,6 +809,6 @@ COM_RSG2_FORUM="Forum"
 COM_RSG2_DOCUMENTATION="Documentation"
 COM_RSG2_VIEW_CHANGE_LOG="View change log of Rsgallery2 software versions"
 COM_RSG2_JUMP_TO_GNU_ORG="Jump to GNU ORG (License definition)"
-COM_RSG2_JUMP_TO_FORUM="Jump to forum for Help with RSgallery2"
-COM_RSG2_JUMP_TO_DOCUMENTATION="Jump to rsgallery21 documentation (Actual old but better than nothing)"
+COM_RSG2_JUMP_TO_FORUM="Jump to RSGallery2 forum for Help"
+COM_RSG2_JUMP_TO_DOCUMENTATION="Jump to RSGallery2 documentation (its about a older version but better than nothing)"
 
