--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -808,8 +808,8 @@ COM_RSG2_SUMMARY_TREE_VIEW="Zusammenfassende Auflistung"
 
 COM_RSG2_FORUM="Forum"
 COM_RSG2_DOCUMENTATION="Documentation"
-COM_RSG2_VIEW_CHANGE_LOG=""
-COM_RSG2_JUMP_TO_GNU_ORG=""
-COM_RSG2_JUMP_TO_FORUM=""
-COM_RSG2_JUMP_TO_DOCUMENTATION=""
+COM_RSG2_VIEW_CHANGE_LOG="Ansicht des Logs der Software Änderungen"
+COM_RSG2_JUMP_TO_GNU_ORG="Zum GNO Org [Lizenz definition]"
+COM_RSG2_JUMP_TO_FORUM="Zum RSGallery2 Forum für Hilfe"
+COM_RSG2_JUMP_TO_DOCUMENTATION="Zur RSGallery2 dokumentation (Es beschreibt eine älter Version aber besser als nichts)"
 
