Include Maintenance danger zone

--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -813,3 +813,10 @@ COM_RSG2_JUMP_TO_GNU_ORG="Zum GNO Org [Lizenz definition]"
 COM_RSG2_JUMP_TO_FORUM="Zum RSGallery2 Forum für Hilfe"
 COM_RSG2_JUMP_TO_DOCUMENTATION="Zur RSGallery2 dokumentation (Es beschreibt eine älter Version aber besser als nichts)"
 
+COM_RSG2_CONFIG_MINUS_VIEW_TXT="Einfache Darstellung aller Konfigurations einschliesslich der internen Einstellungen"
+COM_RSG2_CONFIG_MINUS_RAW_EDIT_TXT="Darstellung zur Bearbeitung aller Konfigurations einschliesslich der internen Einstellungen. "
+Edit view of of all config variables including internal settings. Vorbereitet für Debugzwecke und Notfälle"
+COM_RSG2_PURGEDELETE_EVERYTHING_TXT="Entfernt alle Inhaltsdaten und Bilder innerhalb von RSGallery2. die innere struktur wird behalten. RSGallery2 wird so frisch wie nach der Installation sein"
+COM_RSG2_C_REALLY_UNINSTALL_TXT="Unterstützt den ersten Schritt um RSGAllery komplett zu entfernen. Die Bilder, die daten und die RSGallery2 Tabellen werden komplett entfernt. Wenn danach RSGallery 2 deinstlliert wird, wird nichts zurückbleiben und an RSGallery2 erinnern"
+
+COM_RSG2_REPAIR="In Stand setzen"
