--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -404,7 +404,7 @@ COM_RSG2_PROPORTIONAL="Proportional"
 COM_RSG2_PUBLIC="Public</span>"
 COM_RSG2_PUBLISHED="Published"
 COM_RSG2_PURGED="Purge complete: removed tables and images. Ready to uninstall."
-COM_RSG2_PURGEDELETE_EVERYTHING="Purge tables (data) & delete all images"
+COM_RSG2_PURGEDELETE_EVERYTHING="Purge content data & delete all images"
 COM_RSG2_PURGED_COMMENTS_FROM_DATABASE="Purged table with comments from database."
 COM_RSG2_PURGED_CONFIG_FROM_DATABASE="Purged table with config from database."
 COM_RSG2_PURGED_GALLERIES_FROM_DATABASE="Purged table with galleries from database."
@@ -811,4 +811,13 @@ COM_RSG2_VIEW_CHANGE_LOG="View change log of Rsgallery2 software versions"
 COM_RSG2_JUMP_TO_GNU_ORG="Jump to GNU ORG (License definition)"
 COM_RSG2_JUMP_TO_FORUM="Jump to RSGallery2 forum for Help"
 COM_RSG2_JUMP_TO_DOCUMENTATION="Jump to RSGallery2 documentation (its about a older version but better than nothing)"
+
+COM_RSG2_CONFIG_MINUS_VIEW_TXT="Plain view of all config variables including internal settings"
+COM_RSG2_CONFIG_MINUS_RAW_EDIT_TXT="Edit view of of all config variables including internal settings. Prepared for debug and emergency situations"
+COM_RSG2_PURGEDELETE_EVERYTHING_TXT="Removes all content data and images inside RSGallery2. It keeps the internal structure. RSGallery2 will be as fresh as after the installation"
+COM_RSG2_C_REALLY_UNINSTALL_TXT="Supports the first step to remove RSGgallery2 completely. The images, the data itself and the datastructure of RSGaller2 tables are removed completely. If afterwards the component is deinstalled nothing shall be left and remind of RSGallery2" 
+
+COM_RSG2_REPAIR="Repair"
+
+
 
