Mainenance confirmation completion
Maintenence view has to be improved

--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -784,8 +784,8 @@ COM_RSG2_NO_GALLERY_ASSIGNED="Keine Galerie zugewiesen"
 COM_RSG2_PLEASE_SELECT_A_DIR="Bitte ein Verzeichnis auswählen"
 COM_RSG2_PLEASE_ENTER_A_URL="Bitte eine URL auswählen"
 
-COM_RSG2_CONFIRM_PURGE_TABLES_DEL_IMAGES="Achtung: Es werden alle Daten und alle Bilder gesäubert (gelöscht). Die RSG2 Tabellenstruktur wird erhalten und RSG2 arbeitet weiter. Wollen sie fortfahren ?"
-COM_RSG2_CONFIRM_DELETE_TABLES_IMAGES="Achtung: Es werden alle Daten, Tabellen und Bilder gelöscht. Bitte vor dem Entfernen der Komponente benutzen. RSG2 arbeitet anschliessend nicht mehr. Wollen sie fortfahren ?"
+COM_RSG2_CONFIRM_PURGE_TABLES_DEL_IMAGES="Achtung: Es werden alle Daten und alle Bilder gesäubert (gelöscht). Die RSG2 Tabellenstruktur wird erhalten und RSG2 arbeitet weiter. Bitte erwägen sie zuvor ein Backup durchzuführen. Wollen sie fortfahren ?"
+COM_RSG2_CONFIRM_DELETE_TABLES_IMAGES="Achtung: Es werden alle Daten, Tabellen und Bilder gelöscht. Bitte vor dem Entfernen der Komponente benutzen. RSG2 arbeitet anschliessend nicht mehr. Bitte erwägen sie zuvor ein Backup durchzuführen. Wollen sie fortfahren ?"
 COM_RSG2_DANGER_ZONE="Gefahrenzone"
 COM_RSG2_MINUS_RANDOM_THUMBNAIL_MINUS="- Zufälligers Minibild (Thumbnail) -"
 
@@ -820,3 +820,9 @@ COM_RSG2_PURGEDELETE_EVERYTHING_TXT="Entfernt alle Inhaltsdaten und Bilder inner
 COM_RSG2_C_REALLY_UNINSTALL_TXT="Unterstützt den ersten Schritt um RSGAllery komplett zu entfernen. Die Bilder, die daten und die RSGallery2 Tabellen werden komplett entfernt. Wenn danach RSGallery 2 deinstlliert wird, wird nichts zurückbleiben und an RSGallery2 erinnern"
 
 COM_RSG2_REPAIR="In Stand setzen"
+
+
+COM_RSG2_CONFIRM_CONSIDER_BACKUP_OR_CONTINUE="Bitte erwägen sie zuvor ein Backup durchzuführen oder wollen sie fortfahren ?"
+
+
+
