--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -783,8 +783,8 @@ COM_RSG2_NO_GALLERY_ASSIGNED="No gallery assigned"
 COM_RSG2_PLEASE_SELECT_A_DIR="Please select a directory"
 COM_RSG2_PLEASE_ENTER_A_URL="Please enter a URL"
 
-COM_RSG2_CONFIRM_PURGE_TABLES_DEL_IMAGES="Attention: This will purge (clean) all data and delete all images. The RSG2 table structure will be kept and RSG2 is still working. Do you want to continue ?"
-COM_RSG2_CONFIRM_DELETE_TABLES_IMAGES="Attention: This will delete all tables (in database). It shall be used for uninstall before removing the component. RSG2 is not working afterwards. Do you want to continue ?"
+COM_RSG2_CONFIRM_PURGE_TABLES_DEL_IMAGES="Attention: This will purge (clean) all data and delete all images. The RSG2 table structure will be kept and RSG2 is still working. Please consider to backup before. Do you want to continue ?"
+COM_RSG2_CONFIRM_DELETE_TABLES_IMAGES="Attention: This will delete all tables (in database). It shall be used for uninstall before removing the component. RSG2 is not working afterwards. Please consider to backup before. Do you want to continue ?"
 COM_RSG2_DANGER_ZONE="Danger zone"
 COM_RSG2_MINUS_RANDOM_THUMBNAIL_MINUS="- Random thumbnail -"
 
@@ -818,6 +818,12 @@ COM_RSG2_PURGEDELETE_EVERYTHING_TXT="Removes all content data and images inside 
 COM_RSG2_C_REALLY_UNINSTALL_TXT="Supports the first step to remove RSGgallery2 completely. The images, the data itself and the datastructure of RSGaller2 tables are removed completely. If afterwards the component is deinstalled nothing shall be left and remind of RSGallery2" 
 
 COM_RSG2_REPAIR="Repair"
+
+COM_RSG2_CONFIRM_CONSIDER_BACKUP_OR_CONTINUE="Please consider to backup before or do you want to continue ?"
+
+
+
+
 
 
 
