Maintenance next steps

--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -824,5 +824,8 @@ COM_RSG2_REPAIR="In Stand setzen"
 
 COM_RSG2_CONFIRM_CONSIDER_BACKUP_OR_CONTINUE="Bitte erwägen sie zuvor ein Backup durchzuführen oder wollen sie fortfahren ?"
 
+COM_RSG2_DROPED_TABLE___RSGALLERY2_ACL="DROPed #__rsgall__rsgallery2_catsery2_acl"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_CATS="DROPed #__rsgall__rsgallery2_catsery2_cats"
+
 
 
