--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -821,6 +821,8 @@ COM_RSG2_REPAIR="Repair"
 
 COM_RSG2_CONFIRM_CONSIDER_BACKUP_OR_CONTINUE="Please consider to backup before or do you want to continue ?"
 
+COM_RSG2_DROPED_TABLE___RSGALLERY2_ACL="DROPed #__rsgall__rsgallery2_catsery2_acl"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_CATS="DROPed #__rsgall__rsgallery2_catsery2_cats"
 
 
 
