Small changes maintenance

--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -403,7 +403,7 @@ COM_RSG2_PROCESSING="Processing: "
 COM_RSG2_PROPORTIONAL="Proportional"
 COM_RSG2_PUBLIC="Public</span>"
 COM_RSG2_PUBLISHED="Published"
-COM_RSG2_PURGED="Purge complete: removed tables and images. Ready to uninstall."
+COM_RSG2_PURGED="Purge complete: removed tables and images"
 COM_RSG2_PURGEDELETE_EVERYTHING="Purge content data & delete all images"
 COM_RSG2_PURGED_COMMENTS_FROM_DATABASE="Purged table with comments from database."
 COM_RSG2_PURGED_CONFIG_FROM_DATABASE="Purged table with config from database."
