Smal changes maintenance

--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -145,10 +145,10 @@ COM_RSG2_DISPLAY_VOTING="Zeige Abstimmung"
 COM_RSG2_DISPLAY_WATERMARK="Zeige Wasserzeichen"
 COM_RSG2_DOES_NOT_EXIST="existiert nicht"
 COM_RSG2_DOWNLOAD="Download"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_COMMENTS="DROPed #__rsgallery2_comments"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_CONFIG="DROPed #__rsgallery2_config"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_FILES="DROPed #__rsgallery2_files"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_GALLERIES="DROPed #__rsgallery2_galleries"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_COMMENTS="DROPped #__rsgallery2_comments"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_CONFIG="DROPped #__rsgallery2_config"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_FILES="DROPped #__rsgallery2_files"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_GALLERIES="DROPped #__rsgallery2_galleries"
 COM_RSG2_EDIT="Bearbeiten"
 COM_RSG2_EDIT_IMAGE="Bild bearbeiten"
 COM_RSG2_EDIT_IMAGES="Bilder bearbeiten"
@@ -824,8 +824,10 @@ COM_RSG2_REPAIR="In Stand setzen"
 
 COM_RSG2_CONFIRM_CONSIDER_BACKUP_OR_CONTINUE="Bitte erwägen sie zuvor ein Backup durchzuführen oder wollen sie fortfahren ?"
 
-COM_RSG2_DROPED_TABLE___RSGALLERY2_ACL="DROPed #__rsgall__rsgallery2_catsery2_acl"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_CATS="DROPed #__rsgall__rsgallery2_catsery2_cats"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_ACL="DROPped #__rsgall__rsgallery2_catsery2_acl"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_CATS="DROPped #__rsgall__rsgallery2_catsery2_cats"
 
-
-
+COM_RSG2_PURGED_TABLE_RSGALLERY2_ACL="Purged table RSGallery2 ACL."
+COM_RSG2_PURGED_TABLE_RSGALLERY2_CATS="="Purged table RSGallery2 categories"
+COM_RSG2_PURGED_TABLE_RSGALLERY2_CONFIG="Purged table with RSGallery2 configuration data"
+COM_RSG2_PURGED_TABLE_RSGALLERY2_COMMENTS="Purged table RSGallery2 "
