--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -145,10 +145,10 @@ COM_RSG2_DISPLAY_VOTING="Display Voting"
 COM_RSG2_DISPLAY_WATERMARK="Display Watermark"
 COM_RSG2_DOES_NOT_EXIST="does not exist"
 COM_RSG2_DOWNLOAD="Download"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_COMMENTS="DROPed #__rsgallery2_comments"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_CONFIG="DROPed #__rsgallery2_config"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_FILES="DROPed #__rsgallery2_files"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_GALLERIES="DROPed #__rsgallery2_galleries"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_COMMENTS="DROPped #__rsgallery2_comments"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_CONFIG="DROPped #__rsgallery2_config"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_FILES="DROPped #__rsgallery2_files"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_GALLERIES="DROPped #__rsgallery2_galleries"
 COM_RSG2_EDIT="Edit"
 COM_RSG2_EDIT_IMAGE="Edit image"
 COM_RSG2_EDIT_IMAGES="Edit images"
@@ -807,7 +807,7 @@ COM_RSG2_SUMMARY_TREE_VIEW="Summary view"
 
 COM_RSG2_FORUM="Forum"
 COM_RSG2_DOCUMENTATION="Documentation"
-COM_RSG2_VIEW_CHANGE_LOG="View change log of Rsgallery2 software versions"
+COM_RSG2_VIEW_CHANGE_LOG="View change log of RSGallery2 software versions"
 COM_RSG2_JUMP_TO_GNU_ORG="Jump to GNU ORG (License definition)"
 COM_RSG2_JUMP_TO_FORUM="Jump to RSGallery2 forum for Help"
 COM_RSG2_JUMP_TO_DOCUMENTATION="Jump to RSGallery2 documentation (its about a older version but better than nothing)"
@@ -821,11 +821,12 @@ COM_RSG2_REPAIR="Repair"
 
 COM_RSG2_CONFIRM_CONSIDER_BACKUP_OR_CONTINUE="Please consider to backup before or do you want to continue ?"
 
-COM_RSG2_DROPED_TABLE___RSGALLERY2_ACL="DROPed #__rsgall__rsgallery2_catsery2_acl"
-COM_RSG2_DROPED_TABLE___RSGALLERY2_CATS="DROPed #__rsgall__rsgallery2_catsery2_cats"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_ACL="DROPped #__rsgall__rsgallery2_catsery2_acl"
+COM_RSG2_DROPED_TABLE___RSGALLERY2_CATS="DROPped #__rsgall__rsgallery2_catsery2_cats"
 
-
-
-
+COM_RSG2_PURGED_TABLE_RSGALLERY2_ACL="Purged table RSGallery2 ACL."
+COM_RSG2_PURGED_TABLE_RSGALLERY2_CATS="="Purged table RSGallery2 categories"
+COM_RSG2_PURGED_TABLE_RSGALLERY2_CONFIG="Purged table with RSGallery2 configuration data"
+COM_RSG2_PURGED_TABLE_RSGALLERY2_COMMENTS="Purged table RSGallery2 "
 
 
