configRaw model + controller small changes

--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -829,4 +829,6 @@ COM_RSG2_PURGED_TABLE_RSGALLERY2_CATS="="Purged table RSGallery2 categories"
 COM_RSG2_PURGED_TABLE_RSGALLERY2_CONFIG="Purged table with RSGallery2 configuration data"
 COM_RSG2_PURGED_TABLE_RSGALLERY2_COMMENTS="Purged table RSGallery2 "
 
+COM_RSG2_CONFIGURATION_RAW_VIEW="Configuration view raw data"
+
 
