--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -831,3 +831,5 @@ COM_RSG2_PURGED_TABLE_RSGALLERY2_ACL="Purged table RSGallery2 ACL."
 COM_RSG2_PURGED_TABLE_RSGALLERY2_CATS="="Purged table RSGallery2 categories"
 COM_RSG2_PURGED_TABLE_RSGALLERY2_CONFIG="Purged table with RSGallery2 configuration data"
 COM_RSG2_PURGED_TABLE_RSGALLERY2_COMMENTS="Purged table RSGallery2 "
+
+COM_RSG2_CONFIGURATION_RAW_VIEW="Konfiguration Ansicht Rohdaten"
