view configRaw first sight

--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -825,7 +825,7 @@ COM_RSG2_DROPED_TABLE___RSGALLERY2_ACL="DROPped #__rsgall__rsgallery2_catsery2_a
 COM_RSG2_DROPED_TABLE___RSGALLERY2_CATS="DROPped #__rsgall__rsgallery2_catsery2_cats"
 
 COM_RSG2_PURGED_TABLE_RSGALLERY2_ACL="Purged table RSGallery2 ACL."
-COM_RSG2_PURGED_TABLE_RSGALLERY2_CATS="="Purged table RSGallery2 categories"
+COM_RSG2_PURGED_TABLE_RSGALLERY2_CATS="Purged table RSGallery2 categories"
 COM_RSG2_PURGED_TABLE_RSGALLERY2_CONFIG="Purged table with RSGallery2 configuration data"
 COM_RSG2_PURGED_TABLE_RSGALLERY2_COMMENTS="Purged table RSGallery2 "
 
