rsg2.base: IsDebugActive get value from config
b) Maintenance page looks better

--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -95,7 +95,7 @@ COM_RSG2_CREATE_MISSING_IMAGES="Erzeuge fehlende Bilder"
 COM_RSG2_CREATING_IMAGE_DIRECTORIES_NOT_IMPLEMENTED_YET="Erstellen von Bilder-Verzeichnissen noch nicht implementiert."
 COM_RSG2_CREDITS="Mitwirkende"
 COM_RSG2_CSS="CSS"
-COM_RSG2_C_DEBUG_ON="RSGallery2's Debug Modus ist eingeschaltet: nur die Knöpfe unten benutzen wenn Sie genau wissen was Sie damit bewirken"
+COM_RSG2_C_DEBUG_ON="Bitte die Knöpfe unten nur benutzen wenn Sie genau wissen was Sie damit bewirken"
 COM_RSG2_C_REALLY_UNINSTALL="Lösche RSGallery2 Tabellen und Bilder"
 COM_RSG2_DATABASE_TABLES_CREATED_SUCCESFULLY="Datenbank-Tabellen wurden erfolgreich erzeugt."
 COM_RSG2_DATE="Datum"
@@ -813,7 +813,7 @@ COM_RSG2_JUMP_TO_GNU_ORG="Zum GNO Org [Lizenz definition]"
 COM_RSG2_JUMP_TO_FORUM="Zum RSGallery2 Forum für Hilfe"
 COM_RSG2_JUMP_TO_DOCUMENTATION="Zur RSGallery2 dokumentation (Es beschreibt eine älter Version aber besser als nichts)"
 
-COM_RSG2_CONFIG_MINUS_VIEW_TXT="Einfache Darstellung aller Konfigurations einschliesslich der internen Einstellungen"
+COM_RSG2_CONFIG_MINUS_VIEW_TXT="Einfache Darstellung aller Konfigurations einschliesslich der internen Einstellungen. Werte können nicht verändert werden"
 COM_RSG2_CONFIG_MINUS_RAW_EDIT_TXT="Darstellung zur Bearbeitung aller Konfigurations einschliesslich der internen Einstellungen. "
 Edit view of of all config variables including internal settings. Vorbereitet für Debugzwecke und Notfälle"
 COM_RSG2_PURGEDELETE_EVERYTHING_TXT="Entfernt alle Inhaltsdaten und Bilder innerhalb von RSGallery2. die innere struktur wird behalten. RSGallery2 wird so frisch wie nach der Installation sein"
