--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -95,7 +95,7 @@ COM_RSG2_CREATE_MISSING_IMAGES="Create missing images"
 COM_RSG2_CREATING_IMAGE_DIRECTORIES_NOT_IMPLEMENTED_YET="Creating Image directories not Implemented yet."
 COM_RSG2_CREDITS="Credits"
 COM_RSG2_CSS="CSS"
-COM_RSG2_C_DEBUG_ON="RSGallery2's Debug Mode is on: only use the buttons below if you know what you're doing"
+COM_RSG2_C_DEBUG_ON="Please use the buttons below only if you know what you're doing"
 COM_RSG2_C_REALLY_UNINSTALL="Remove RSGallery2 tables and images"
 COM_RSG2_DATABASE_TABLES_CREATED_SUCCESFULLY="Database tables are created successfully."
 COM_RSG2_DATE="Date"
@@ -812,7 +812,7 @@ COM_RSG2_JUMP_TO_GNU_ORG="Jump to GNU ORG (License definition)"
 COM_RSG2_JUMP_TO_FORUM="Jump to RSGallery2 forum for Help"
 COM_RSG2_JUMP_TO_DOCUMENTATION="Jump to RSGallery2 documentation (its about a older version but better than nothing)"
 
-COM_RSG2_CONFIG_MINUS_VIEW_TXT="Plain view of all config variables including internal settings"
+COM_RSG2_CONFIG_MINUS_VIEW_TXT="Plain view of all config variables including internal settings. The values can't be changed"
 COM_RSG2_CONFIG_MINUS_RAW_EDIT_TXT="Edit view of of all config variables including internal settings. Prepared for debug and emergency situations"
 COM_RSG2_PURGEDELETE_EVERYTHING_TXT="Removes all content data and images inside RSGallery2. It keeps the internal structure. RSGallery2 will be as fresh as after the installation"
 COM_RSG2_C_REALLY_UNINSTALL_TXT="Supports the first step to remove RSGgallery2 completely. The images, the data itself and the datastructure of RSGaller2 tables are removed completely. If afterwards the component is deinstalled nothing shall be left and remind of RSGallery2" 
