--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -831,4 +831,4 @@ COM_RSG2_PURGED_TABLE_RSGALLERY2_COMMENTS="Purged table RSGallery2 "
 
 COM_RSG2_CONFIGURATION_RAW_VIEW="Configuration view raw data"
 
-
+COM_RSG2_FUNCTIONS_MAY_CHANGE_DATA="Following functions may change data"
