--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -833,3 +833,5 @@ COM_RSG2_PURGED_TABLE_RSGALLERY2_CONFIG="Purged table with RSGallery2 configurat
 COM_RSG2_PURGED_TABLE_RSGALLERY2_COMMENTS="Purged table RSGallery2 "
 
 COM_RSG2_CONFIGURATION_RAW_VIEW="Konfiguration Ansicht Rohdaten"
+
+COM_RSG2_FUNCTIONS_MAY_CHANGE_DATA="Folgende Funktionen ändern voraussichtlich Daten"
