Part 1 adding icons to menu and left selection
Part 2 exchange main - icons not done

--- a/admin/language/de-DE/de-DE.com_rsg2.sys.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.sys.ini
@@ -11,12 +11,13 @@
 COM_RSG2_XML_DESCRIPTION="Rsg2 ist eine vollständig unterstütze Galerie-Komponente für Joomla! Besuchen Sie die offizielle FAQ-Seite, Support-Foren und letzte Neuigkeiten: www.rsgallery2.nl."
 COM_RSG2="RSG2"
 COM_RSG2_MENU="RSG2"
-COM_RSG2_MENU_CONTROL_PANEL="Kontrollzentrum"
-COM_RSG2_MENU_BATCH_UPLOAD="Stapel-Upload"
-COM_RSG2_MENU_UPLOAD="Upload"
-COM_RSG2_MENU_GALLERIES="Galerien"
+COM_RSG2_MENU_CONTROL_PANEL="<i class="icon-home-2"></i> Kontrollzentrum"
+COM_RSG2_MENU_BATCH_UPLOAD="<i class=" icon-upload"></i> <i class=" icon-upload"></i> Stapel-Upload"
+COM_RSG2_MENU_UPLOAD="<i class=" icon-upload"></i> Upload"
+COM_RSG2_MENU_GALLERIES="<i class="icon-images"></i> Galerien"
 ;COM_RSG2_MENU_ITEMS="Bilder"
-COM_RSG2_MENU_IMAGES="Bilder"
+COM_RSG2_MENU_IMAGES="<i class="icon-image"></i> Bilder"
+COM_RSG2_MENU_CONFIG="<i class="icon-cog"></i> Konfiguration"
 
 ;-----------------------------------------------------------------
 ; Old parts
