--- a/admin/language/en-GB/en-GB.com_rsg2.sys.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.sys.ini
@@ -11,12 +11,13 @@
 COM_RSG2_XML_DESCRIPTION="Rsg2 is a full featured gallery component for Joomla!  Visit the official site for FAQ, support forums and latest news: www.rsgallery2.nl."
 COM_RSG2="RSG2"
 COM_RSG2_MENU="RSG2"
-COM_RSG2_MENU_CONTROL_PANEL="Control panel"
-COM_RSG2_MENU_BATCH_UPLOAD="Batch upload"
-COM_RSG2_MENU_UPLOAD="Upload"
-COM_RSG2_MENU_GALLERIES="Galleries"
-COM_RSG2_MENU_ITEMS="Images"
-COM_RSG2_MENU_IMAGES="Images"
+COM_RSG2_MENU_CONTROL_PANEL="<i class="icon-home-2"></i> Control panel"
+COM_RSG2_MENU_BATCH_UPLOAD="<i class=" icon-upload"></i> <i class=" icon-upload"></i> Batch upload"
+COM_RSG2_MENU_UPLOAD="<i class=" icon-upload"></i> Upload"
+COM_RSG2_MENU_GALLERIES="<i class="icon-images"></i> Galleries"
+;COM_RSG2_MENU_ITEMS="Bilder"
+COM_RSG2_MENU_IMAGES="<i class="icon-image"></i> Images"
+COM_RSG2_MENU_CONFIG="<i class="icon-cog"></i> Configuration"
 
 ;-----------------------------------------------------------------
 ; Old parts
