--- a/admin/language/en-GB/en-GB.com_rsg2.sys.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.sys.ini
@@ -18,6 +18,7 @@ COM_RSG2_MENU_GALLERIES="<i class="icon-images"></i> Galleries"
 ;COM_RSG2_MENU_ITEMS="Bilder"
 COM_RSG2_MENU_IMAGES="<i class="icon-image"></i> Images"
 COM_RSG2_MENU_CONFIG="<i class="icon-cog"></i> Configuration"
+COM_RSG2_MENU_SUMMARY_TREE_VIEW="<i class="icon-tree-2"></i> CSummary tree view"
 
 ;-----------------------------------------------------------------
 ; Old parts
