--- a/admin/language/en-GB/en-GB.com_rsg2.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.ini
@@ -12,7 +12,7 @@
 ; debug language (global configuration) and check for 'Parsing errors in language files'. 
 ; This will also show a list of 'Untranslated Strings'.
 
-COM_RSG2="RSGallery2"
+COM_RSG2="RSG2"
 COM_RSGALLERY2_ABSTRACT_IMAGE_LIBRARY_CLASS_NO_RESIZE_AVAILABLE="This is the abstract image library class, no resize available"
 COM_RSGALLERY2_ACCESS_CONTROL_DATA_DELETED="Purged table with Access Control Data."
 COM_RSGALLERY2_ACCESS_CONTROL_SETTINGS="Access Control Settings"
