--- a/admin/language/en-GB/en-GB.com_rsg2.sys.ini
+++ b/admin/language/en-GB/en-GB.com_rsg2.sys.ini
@@ -8,9 +8,9 @@
 ; Translations used for installation
 ; Save in UTF-8 without BOM (with e.g. Notepad ++)
 
-COM_RSGALLERY2_XML_DESCRIPTION="Rsg2 is a full featured gallery component for Joomla!  Visit the official site for FAQ, support forums and latest news: www.rsgallery2.nl."
+COM_RSG2_XML_DESCRIPTION="Rsg2 is a full featured gallery component for Joomla!  Visit the official site for FAQ, support forums and latest news: www.rsgallery2.nl."
 COM_RSG2="RSG2"
-COM_RSGALLERY2_MENU="RSG2"
+COM_RSG2_MENU="RSG2"
 COM_RSGALLERY2_MENU_CONTROL_PANEL="<i class="icon-home-2"></i> Control panel"
 COM_RSGALLERY2_MENU_BATCH_UPLOAD="<i class=" icon-upload"></i> <i class=" icon-upload"></i> Batch upload"
 COM_RSGALLERY2_MENU_UPLOAD="<i class=" icon-upload"></i> Upload"
@@ -18,7 +18,7 @@ COM_RSGALLERY2_MENU_GALLERIES="<i class="icon-images"></i> Galleries"
 ;COM_RSGALLERY2_MENU_ITEMS="Bilder"
 COM_RSGALLERY2_MENU_IMAGES="<i class="icon-image"></i> Images"
 COM_RSGALLERY2_MENU_CONFIG="<i class="icon-cog"></i> Configuration"
-COM_RSGALLERY2_MENU_SUMMARY_TREE_VIEW="<i class="icon-tree-2"></i> CSummary tree view"
+COM_RSGALLERY2_MENU_SUMMARY_TREE_VIEW="<i class="icon-tree-2"></i> Summary tree view"
 
 ;-----------------------------------------------------------------
 ; Old parts
