--- a/admin/language/de-DE/de-DE.com_rsg2.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.ini
@@ -12,7 +12,7 @@
 ; debug language (global configuration) and check for 'Parsing errors in language files'. 
 ; This will also show a list of 'Untranslated Strings'.
 
-COM_RSG2="RSGallery2"
+COM_RSG2="RSG2"
 COM_RSGALLERY2_ABSTRACT_IMAGE_LIBRARY_CLASS_NO_RESIZE_AVAILABLE="Dies ist eine abstrakte Bild-Klasse, keine Änderungsmöglichkeit der Grösse"
 COM_RSGALLERY2_ACCESS_CONTROL_DATA_DELETED="Bereinigte Tabelle mit Access Control Data."
 COM_RSGALLERY2_ACCESS_CONTROL_SETTINGS="Einstellungen Zugangskontrolle"
