--- a/admin/language/de-DE/de-DE.com_rsg2.sys.ini
+++ b/admin/language/de-DE/de-DE.com_rsg2.sys.ini
@@ -8,9 +8,9 @@
 ; Translations used for installation
 ; Save in UTF-8 without BOM (with e.g. Notepad ++)
 
-COM_RSGALLERY2_XML_DESCRIPTION="Rsg2 ist eine vollständig unterstütze Galerie-Komponente für Joomla! Besuchen Sie die offizielle FAQ-Seite, Support-Foren und letzte Neuigkeiten: www.rsgallery2.nl."
+COM_RSG2_XML_DESCRIPTION="Rsg2 ist eine vollständig unterstütze Galerie-Komponente für Joomla! Besuchen Sie die offizielle FAQ-Seite, Support-Foren und letzte Neuigkeiten: www.rsgallery2.nl."
 COM_RSG2="RSG2"
-COM_RSGALLERY2_MENU="RSG2"
+COM_RSG2_MENU="RSG2"
 COM_RSGALLERY2_MENU_CONTROL_PANEL="<i class="icon-home-2"></i> Kontrollzentrum"
 COM_RSGALLERY2_MENU_BATCH_UPLOAD="<i class=" icon-upload"></i> <i class=" icon-upload"></i> Stapel-Upload"
 COM_RSGALLERY2_MENU_UPLOAD="<i class=" icon-upload"></i> Upload"
@@ -18,6 +18,7 @@ COM_RSGALLERY2_MENU_GALLERIES="<i class="icon-images"></i> Galerien"
 ;COM_RSGALLERY2_MENU_ITEMS="Bilder"
 COM_RSGALLERY2_MENU_IMAGES="<i class="icon-image"></i> Bilder"
 COM_RSGALLERY2_MENU_CONFIG="<i class="icon-cog"></i> Konfiguration"
+COM_RSGALLERY2_MENU_SUMMARY_TREE_VIEW="<i class="icon-tree-2"></i> Gesamt Baum-Ansicht"
 
 ;-----------------------------------------------------------------
 ; Old parts
